Auto-generated JUnit tests | 2026-04-30 15:22:04